--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,40 @@
-html, body, #container {
+body {
+  margin: 0px;
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
-body {
-  padding-top: 50px;
+/* Add banner to header background */
+header {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 52px;
+  background-color: #000000;
+  box-shadow: 0px 0px 5px black;
+  z-index: 800;
+}
+
+h1 {
+  color: white;
+  font-size: 16px;
+  display: inline-block;
+  margin-top: 0.5em;
+  margin-bottom: 0.0em;
+  margin-left: 0.5em;
+  margin-right: 0;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 12px;
+  color: white;
+  display: inline-block;
+  margin-top: 0.25em;
+  margin-bottom: 0.0em;
+  margin-left: 0.75em;
+  margin-right: 0;
+  font-weight: normal;
 }
 
 h3 {
@@ -23,8 +52,14 @@ h4 {
   font-family: "Montserrat";
 }
 
-/*this is important to give the map a height*/
+/* Set map parameters */
 #map {
-  width: auto;
-  height: 100%;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  top: 52px;
+}
+
+.easy-button-button {
+  display: inline-block !important;
 }
